Sat Feb  6 15:11:26 GMT 1999  Austin Donnelly  <austin@gimp.org>

	* app/gimpset.c
	* app/gimpset.h: remove the member_modified hacks
	* app/module_db.c: make module_info a proper object emitting a
	    modified signal.

1999-02-05  Jay Cox  <jaycox@earthlink.net>

	* app/clone.c: merged the registered clone option from the
 	hollywood branch.  Made the source for unaligned clones reset
 	after each stroke.  Make sure we don't crash if the source
 	drawable gets destroyed.

Thu Feb  4 17:22:25 EST 1999 Peter Teichman  <pat4@acpub.duke.edu>

	* app/convolve.c: added pressure support for the Convolve tool

Wed Feb  3 18:12:19 PST 1999 Manish Singh <yosh@gimp.org>

	* Made 1.1.2 release

	* configure.in: add plugindetails

	* libgimp/Makefile.am: add shared lib deps for glib/gtk

	* libgimp/gimpmatrix.c: use sizeof(GimpMatrix) instead of
	sizeof(double)*9, memcpy in gimp_matrix_duplicate instead
	of nested for loop

Thu Feb  4 00:23:26 GMT 1999 Andy Thomas <alt@picnic.demon.co.uk>

	Tried again to add the plugin dir & files.

Thu Feb  4 00:07:13 GMT 1999 Andy Thomas <alt@picnic.demon.co.uk>

	Changed:-

	* plug-ins/Makefile.am

	New plugin located in plug-ins/plugindetails. Allows you to browse
	the plugin menu system.

Wed Feb  3 23:46:12 GMT 1999 Adam D. Moss <adam@gimp.org>

	* app/fileops.c: More work on thumbnailing - the
	Load Dialog now knows about thumbnails and shows them.
	Still some UI and code tidy-up remaining.

Tue Feb  2 23:34:37 PST 1999 Manish Singh <yosh@gimp.org>

	* libgimp/gimp.c
	* app/datafiles.c
	* app/docindex.c
	* app/gimprc.c
	* app/gradient.c
	* app/palette.c: use g_get_home_dir () instead of getenv ("HOME")

	* app/fileops.c: #warning is a gccism

	* app/invert.[ch]: minor cleanup

	* app/menus.c: more cleanups

	* app/blob.c: even more cleanups

	* libgimp/parasite.c: YACU

	* ltconfig
	* ltmain.sh: CVS libtool 1.2e

	* modules/Makefile.am: use -module and -avoid-version flags

	* lic/Makefile.am
	* mapcolor/Makefile.am